# Crender

./: .gitignore  CMakeLists.txt  status
crender2/: .gitignore
crender2/src/: crender.h
crender2/src/core/: cr_command_queue.cpp  cr_command_queue.h  cr_context.cpp  cr_context.h  cr_gpu.cpp  cr_gpu.h  cr_gpu.win32.cpp  cr_gpu_buffer.h  cr_gpu_program.h  cr_gpu_shader.h  cr_platform.cpp  cr_platform.h  cr_strhash.h  cr_thread.cpp  cr_thread.h  cr_vec.cpp  cr_vec.h
crender2/src/core/nedmalloc/: malloc.c.h  nedmalloc.c
crender2/src/core/private/: cr_buffer_pool.cpp  cr_buffer_pool.h  cr_command_queue.cpp  cr_command_queue.h  cr_context.cpp  cr_context.h  cr_gpu.cpp  cr_gpu.gl.cpp  cr_gpu.gl.h  cr_gpu.h  cr_gpu.win32.cpp  cr_gpu.win32.h  cr_gpu_buffer.cpp  cr_gpu_buffer.gl.cpp  cr_gpu_buffer.gl.h  cr_gpu_buffer.h  cr_gpu_program.cpp  cr_gpu_program.gl.cpp  cr_gpu_program.gl.h  cr_gpu_program.h  cr_gpu_shader..cpp  cr_gpu_shader.cpp  cr_gpu_shader.gl.cpp  cr_gpu_shader.gl.h  cr_gpu_shader.h  cr_object.h  cr_platform.cpp  cr_thread.cpp  cr_thread.h  cr_ts_queue.h  cr_vec.cpp
crender2/src/framework/: cr_application.cpp  cr_application.h  cr_entry.win32.cpp
crender2/src/framework/private/: cr_application.h
crender2/src/framework/win32/: cr_entry.cpp
crender2/test/: main.cpp
crender2/test/core/: buffer_pool_tests.cpp  command_queue_tests.cpp  context_tests.cpp  test_object.cpp  test_object.h
crender2/test/framework/: application.cpp
crender2/tool/astyle/: astyle.bat
example/: CMakeLists.txt  Cloth.c  Cloth.h  ClothSimulation.example.c  Common.android.c  Common.c  Common.generic.c  Common.h  Common.ios.m  EmbeddedHttpd.example.c  Example-Info.plist  Example.xib  FixedPipeline.example.c  Framework.android.c  Framework.android.nv.cpp  Framework.h  Framework.ios.m  Framework.windows.c  Label.c  Label.example.c  Label.h  Label.windows.h  Material.c  Material.h  Menu.c  Menu.h  Mesh.c  Mesh.example.c  Mesh.h  Mesh.obj.c  MeshPerformance.example.c  Pvr.c  Pvr.h  Reflection.example.c  Remote.c  Remote.h  Remote.impl.android.c  Remote.impl.h  Remote.impl.ios.h  Remote.impl.ios.m  (+15 more)
example/android/: AndroidManifest.xml  build.sh
example/android/Mesh.example/: .classpath  .cproject  .project  AndroidManifest.xml  copy_assets.sh
example/android/Mesh.example/jni/: Android.mk
example/android/Mesh.example/res/values/: strings.xml
example/android/Mesh.example/src/org/crender/: MeshExample.java
example/android/Water.example/: .cproject  .project  AndroidManifest.xml  assets.sh  build.sh  copy_assets.sh
example/android/Water.example/jni/: Android.mk
example/android/Water.example/res/values/: strings.xml
example/android/jni/: Android.mk
example/android/res/values/: strings.xml
lib/: Android.mk
lib/crender/: API.d3d9.c  API.d3d9.h  API.gl.c  API.gl.h  Buffer.d3d9.c  Buffer.d3d9.h  Buffer.gl.c  Buffer.gl.h  Buffer.h  Context.android.c  Context.android.nv.cpp  Context.d3d9.h  Context.gl.c  Context.gl.h  Context.h  Context.ios.m  Context.windows.d3d9.c  Context.windows.gl.c  Framework.android.c  Framework.h  Framework.ios.m  Framework.windows.d3d9.c  Framework.windows.gl.c  GpuFormat.h  GpuState.d3d9.c  GpuState.d3d9.h  GpuState.gl.c  GpuState.gl.h  GpuState.h  Mat44.c  Mat44.d3d9.c  Mat44.gl.c  Mat44.h  Mem.c  Mem.h  Memory.c  Memory.h  NvpParser.c  NvpParser.h  Platform.c  (+26 more)
lib/crender/uthash/: uthash.h
lib/glsw/: glsw.c  glsw.h
lib/httpd/: api.c  config.h  httpd.h  ip_acl.c  protocol.c
lib/nv/: .classpath  .cproject  .project
lib/nv/jni/: Android.mk  Application.mk  nv_debug.h  nv_global.h  nv_types.h
lib/nv/jni/nv_apk_file/: nv_apk_file.c  nv_apk_file.h
lib/nv/jni/nv_event/: nv_event.cpp  nv_event.h
lib/nv/jni/nv_file/: nv_file.c  nv_file.h
lib/nv/jni/nv_glesutil/: nv_images.cpp  nv_images.h
lib/nv/jni/nv_hhdds/: nv_hhdds.cpp  nv_hhdds.h  nv_hhdds_internal.h
lib/nv/jni/nv_log/: nv_log.cpp  nv_log.h
lib/nv/jni/nv_math/: NvVec.h  misc.h  nv_math.cpp  nv_math.h  nv_matrix.cpp  nv_matrix.h  nv_quat.cpp  nv_quat.h
lib/nv/jni/nv_shader/: nv_shader.cpp  nv_shader.h
lib/nv/jni/nv_sound/: nv_sound.cpp  nv_sound.h
lib/nv/jni/nv_thread/: nv_thread.c  nv_thread.h
lib/nv/jni/nv_time/: nv_time.cpp  nv_time.h
lib/nv/jni/nv_util/: nv_util.cpp  nv_util.h
lib/nv/src/com/nvidia/devtech/: AudioHelper.java  NvAPKFileHelper.java  NvActivity.java  NvEventQueueActivity.java  NvGLES2Activity.java  NvGLESActivity.java  NvUtil.java
lib/pez/: pez.android.c  pez.cocoa.m  pez.h  pez.linux.c  pez.windows.c
media/: ClothSimulation.gles  ClothSimulation.glsl  ClothSimulation.hlsl  Common.gles  Common.glsl  Common.hlsl  Mesh.gles  Mesh.glsl  Mesh.hlsl  MeshPerformance.gles  MeshPerformance.glsl  MeshPerformance.hlsl  Reflection.gles  Reflection.glsl  Reflection.hlsl  ShadowMap.gles  ShadowMap.hlsl  TextureAnimation.glsl  TextureAnimation.hlsl  TriangleTessellation.glsl  Water.gles  Water.glsl  monkey.blend
test/: TestXPRender.c
webcl/: cloth.js  crender.js  detect_cl.html  e01_triangles.html  e02_textures.html  e03_loadmesh.html  e04_render_to_texture.html  e05_cloth_simulation.html  e05_water.html  e06_cloth_simulation.html  init_gl.html  textures.html  triangles.html  water.js
webcl/media/: box.mesh.json  triangle.mesh.json
